# crypto_backtracking

./: .gitignore  README.md  pyproject.toml
scripts/: batch_backtest.py  batch_optimize.py  dip_analyzer.py  multi_asset_backtest.py  optim_shared.py  optimize.py  optimize_ga.py  optimize_wfa.py
src/trade_simulator/: __init__.py  api.py  cli.py  engine.py  models.py  plotting.py  report.py  strategy.py
strategies/: dip_buyer.json  example.json
strategies/big_dip/: 01_crash_catcher_3pct.json  02_crash_catcher_5pct.json  03_crash_catcher_7pct.json  04_dip_ladder.json  05_cascade_crash.json  06_whale_scoop.json  07_daily_crash_buyer.json  08_triple_cascade_crash.json
strategies/champions/: 01_multi_dca_champion.json  02_deep_guarded.json  03_cascade_dca_champion.json  04_deep_hunter.json  05_deep_wide_guard.json  06_deep_hunter_safe.json  07_dual_deep_dca.json  08_cascade_deep_safe.json
strategies/dip_data/: 01_big_median.json  02_big_avg.json  03_crash_median.json  04_crash_avg.json  05_extreme.json  06_dca_all_layers.json  07_big_conservative.json  08_cascade_big_crash.json
strategies/scalping/: 01_micro_dip_scalper.json  02_symmetric_scalper.json  03_dca_ladder.json  04_momentum_rider.json  05_cascade_dca.json  06_aggressive_reversion.json  07_tight_grid.json  08_asymmetric_scalper.json
strategies/scalping_v2/: 01_deep_dip_4pct.json  02_deep_dip_6pct.json  03_deep_dip_guarded.json  04_multi_deep_dca.json  05_balanced_2pct.json  06_wide_cushion.json  07_momentum_safe.json  (+1 more)
tests/: conftest.py  test_api.py  test_engine.py  test_report.py  test_strategy.py
(+8 files in other folders)
