[project]
name = "trade-simulator"
version = "0.1.0"
description = "Trading backtesting simulator using Jup.ag OHLCV data"
readme = "README.md"
authors = [
    { name = "Zarial", email = "zarial@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "plotly>=5.18",
    "pandas>=2.2",
    "pydantic>=2.6",
    "optuna>=4.8.0",
]

[project.scripts]
trade-sim = "trade_simulator.cli:cli"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
]
